--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;1,300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&family=Work+Sans:ital,wght@0,400;1,300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;1,300&display=swap');
 </style>
 <link href='styles.css' rel="stylesheet"/>
 </head>
@@ -16,15 +17,18 @@
                         <img src="./image 18.png"/>
                         </div>
                         <a><i>Verify certificate here: www.hng.tech/4558745shd</i></a>
+                        <div>
+                            
+                        </div>
                     </div>
                     <h3>Certificate of participation</h3>
-                    <div>
+                    <div class="mid-body">
                         <h1>Flix Doe</h2>
                             <p>Over the period of August to October 2021, Felix Doe participated in the <br/>
                                 the Frontend Website Development track of the <b>HNG Cohort 8 Internship.</b> </p>
                             <h4>Successfully completed stage 5 of 5</h5>
                     </div>
-                    <div>
+                    <div class="foots">
                         <img class="sign" src="./Mark Essien.png"/>
                         <div>
                             <span>Mark Essien</span>
