--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <img src="./ingresive.png"/>
                         <img src="./image 18.png"/>
                         </div>
-                        <a><i>Verify certificate here: www.hng.tech/4558745shd</i></a>
+                        <a href="#"><i>Verify certificate here: www.hng.tech/4558745shd</i></a>
                         <div>
                             
                         </div>
