responsiveness correction and little styles update

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+zx<!DOCTYPE html>
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&family=Work+Sans:ital,wght@0,400;1,300&display=swap');
@@ -17,16 +17,14 @@
                         <img src="./image 18.png"/>
                         </div>
                         <a href="#"><i>Verify certificate here: www.hng.tech/4558745shd</i></a>
-                        <div>
-                            
-                        </div>
+                       
                     </div>
                     <h3>Certificate of participation</h3>
                     <div class="mid-body">
-                        <h1>Flix Doe</h2>
-                            <p>Over the period of August to October 2021, Felix Doe participated in the <br/>
+                        <h1>Aaron Sunday</h2>
+                            <p>Over the period of August to October 2021, Aaron Sunday participated in the <br/>
                                 the Frontend Website Development track of the <b>HNG Cohort 8 Internship.</b> </p>
-                            <h4>Successfully completed stage 5 of 5</h5>
+                            <h4>Successfully completed stage 10 of 10</h5>
                     </div>
                     <div class="foots">
                         <img class="sign" src="./Mark Essien.png"/>
