--- a/Certificate/index.html
+++ b/Certificate/index.html
@@ -16,10 +16,10 @@
                     </div>
                     <h3>Certificate of participation</h3>
                     <div>
-                        <h1>Flix Doe</h2>
+                        <h1>Aaron Sunday</h2>
                             <p>Over the period of August to October 2021, Felix Doe participated in the <br/>
                                 the Frontend Website Development track of the <b>HNG Cohort 8 Internship.</b> </p>
-                            <h4>Successfully completed stage 5 of 5</h5>
+                            <h4>Successfully completed stage 10 of 10</h5>
                     </div>
                     <div>
                         <img class="sign" src="./Mark Essien.png"/>
